<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">    <modelVersion>4.0.0</modelVersion>    <groupId>fr.kaddath.apps.fluxx</groupId>    <artifactId>fluxx</artifactId>    <version>1.0</version>    <packaging>pom</packaging>    <name>fluxx</name>    <description>Root pom.xml for all fluxx projects</description>    <modules>        <module>fluxx-core</module>        <module>fluxx-web</module>    </modules>    <properties>        <junit-version>4.7</junit-version>        <eclipselink-version>2.0.1</eclipselink-version>	<javax-persistence-version>2.0.0</javax-persistence-version>        <glassfish-version>3.0.1-b20</glassfish-version>        <sl4j-version>1.5.6</sl4j-version>        <rome-version>0.9</rome-version>        <commons-lang-version>2.3</commons-lang-version>        <eh-cache-version>2.2.0</eh-cache-version>        <hibernate-validator-version>4.0.2.GA</hibernate-validator-version>        <javaee-version>6.0</javaee-version>        <jdom-version>1.0</jdom-version>        <mockito-version>1.8.5</mockito-version>        <jsf-version>2.0.2-b10</jsf-version>    </properties>   <repositories>        <repository>            <id>glassfish-maven-repository.dev.java.net</id>            <name>GlassFish Maven Repository</name>            <url>http://download.java.net/maven/glassfish</url>        </repository>        <repository>            <id>EclipseLink Repo</id>            <name>Eclipse maven repository http://eclipse.ialto.org/rt/eclipselink/maven.repo/</name>            <url>http://mirror.csclub.uwaterloo.ca/eclipse/rt/eclipselink/maven.repo/</url>        </repository>        <repository>            <id>Maven2</id>            <url>http://repo1.maven.org/maven2</url>            <name>Maven2</name>        </repository>        <repository>            <id>Maven2 Repo 2</id>            <url>http://repo2.maven.org/maven2</url>            <name>Maven2 Repo 2</name>        </repository>        <repository>            <id>JBoss</id>            <url>http://repository.jboss.com/maven2</url>            <name>JBoss</name>        </repository>        <repository>            <id>Java</id>            <url>http://download.java.net/maven/2/</url>            <name>Java</name>        </repository>        <repository>            <id>sourceforge</id>            <url>http://oss.sonatype.org/content/groups/sourceforge/</url>            <releases>                <enabled>true</enabled>            </releases>            <snapshots>                <enabled>true</enabled>            </snapshots>        </repository>    </repositories>    <build>        <plugins>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-compiler-plugin</artifactId>                <inherited>true</inherited>                <configuration>                    <source>1.6</source>                    <target>1.6</target>                    <version>2.3.1</version>                    <compilerArgument>-Djava.endorsed.dirs=${glassfish-home}/modules/endorsed</compilerArgument>                </configuration>            </plugin>        </plugins>    </build></project>	